--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ disqus:
   id:               "kiko-plus"
 
 # URL
-url:                "https://scuiaa.github.io" # the base hostname & protocol for your site
+url:                "https://scuiaa555.github.io" # the base hostname & protocol for your site
 # url:                "http://localhost:4000" # use this url when you develop
 baseurl:            "/Kiko-plus" # the subpath of your site, e.g. /blog
 
