--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ name:               "Cui Shidong"
 author:
   facebook:         your-id
   twitter:          your-id
-  github:           your-id
+  github:           scuiaa555
   linkedin:         your-id
   medium:           your-id
   tumblr:           your-id
@@ -16,7 +16,7 @@ author:
 
 copyright:
   year:             2017
-  name:             Kiko
+  name:             Cui Shidong
 
 # Google-analytics
 google-analytics:
