--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ disqus:
   id:               ""
 
 # URL
-url:                "scuiaa555.github.io" # the base hostname & protocol for your site
+url:                "http://scuiaa555.github.io" # the base hostname & protocol for your site
 # url:                "http://localhost:4000" # use this url when you develop
 baseurl:            "/blog" # the subpath of your site, e.g. /blog
 
