--- a/_config.yml
+++ b/_config.yml
@@ -27,9 +27,9 @@ disqus:
   id:               ""
 
 # URL
-url:                "http://scuiaa555.github.io" # the base hostname & protocol for your site
+url:                "https://scuiaa555.github.io" # the base hostname & protocol for your site
 # url:                "http://localhost:4000" # use this url when you develop
-baseurl:            "/blog" # the subpath of your site, e.g. /blog
+baseurl:             # the subpath of your site, e.g. /blog
 
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
