--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # # # # # # # # # # # # #
 
 # Basic
-name:               "Dong"
+name:               "Stone"
 
 author:
   facebook:         your-id
@@ -12,11 +12,11 @@ author:
   linkedin:         your-id
   medium:           your-id
   tumblr:           your-id
-  email:            your-id@your-email.com
+  email:            cuishidong555@gmail.com
 
 copyright:
   year:             2017
-  name:             Kiko
+  name:             Shidong Cui
 
 # Google-analytics
 google-analytics:
@@ -33,7 +33,7 @@ baseurl:             # the subpath of your site, e.g. /blog
 
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-timezone:           Asia/Seoul
+timezone:           Asia/Hong_Kong
 permalink:          /:year-:month-:day/:title/
 
 # Pagination
@@ -54,7 +54,7 @@ nav:
   - name:           "Tags"
     url:            "/tags"
   - name:           "Github"
-    url:            "https://github.com/AWEEKJ/Kiko-plus"
+    url:            "https://github.com/scuiaa555"
 
 # Sass
 sass:
