--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ google-analytics:
 
 # Disqus
 disqus:
-  id:               ""
+  id:               "scuiaa555"
 
 # URL
 url:                "https://scuiaa555.github.io" # the base hostname & protocol for your site
